# attestation-check

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tee_verify/: __init__.py  binding.py  cli.py  model_identity.py  models.py  verifier.py
src/tee_verify/certs/: intel_root_ca.pem  nvidia_root_ca.pem
src/tee_verify/formats/: ollm.py
src/tee_verify/nvidia/: ocsp.py  parser.py  rim.py  verifier.py
src/tee_verify/tdx/: parser.py  pcs.py  verifier.py
tests/: test_binding.py  test_integration.py  test_nvidia_parser.py  test_nvidia_verifier.py  test_ollm_adapter.py  test_tdx_parser.py  test_tdx_verifier.py
tests/fixtures/: gpu1_cert.pem  live_explorer_response.json  live_ollm_request_body.json  live_ollm_response.json  live_receipt.json  live_response_body.txt  real_ollm_request.json  request.json  sync_attestation.json  sync_request_body.txt  sync_response_body.txt  tdx_quote.hex
